--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -106,6 +106,7 @@
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-dialog": "^0.10.0",
     "react-bootstrap-slider": "2.1.5",
+    "react-bootstrap-table-next": "^1.4.0",
     "react-color": "^2.13.8",
     "react-datetime": "^2.14.0",
     "react-dnd": "^2.5.4",
@@ -125,6 +126,7 @@
     "react-split-pane": "^0.1.66",
     "react-sticky": "^6.0.2",
     "react-syntax-highlighter": "^7.0.4",
+    "react-tag-autocomplete": "^5.5.1",
     "react-virtualized": "9.19.1",
     "react-virtualized-select": "^3.1.3",
     "reactable": "1.0.2",
@@ -138,7 +140,8 @@
     "supercluster": "^4.1.1",
     "underscore": "^1.8.3",
     "urijs": "^1.18.10",
-    "viewport-mercator-project": "^5.0.0"
+    "viewport-mercator-project": "^5.0.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
