--- a/ansible/inventory/templates/group_vars/global/all/superset.yml
+++ b/ansible/inventory/templates/group_vars/global/all/superset.yml
@@ -36,18 +36,28 @@ superset_docker_images:
 #                      Configurations                              #
 #------------------------------------------------------------------#
 
+superset_owner_user: 'postgres'
+superset_owner_password: 'postgres'
+
+superset_postgres_access_ip: "{{ platform_loadbalancer_vip_01 }}"
+superset_postgres_access_port: "{{ platform_postgresql_port }}"
+
 superset_sql_conn_creds:
   admin:
     postgres:
       user: "{{ platform_postgres_admin_login }}"
       password: "{{ platform_postgres_admin_password }}"
 
-superset_postgres_db: "superset"
-superset_postgres_db_user: "{{ usermanagement_sql_conn_creds['admin']['postgres']['user'] }}"
-superset_postgres_db_passwd: "{{ usermanagement_sql_conn_creds['admin']['postgres']['password'] }}"
+superset_sql_conn_targets:
+  postgres:
+    host: "{{ superset_postgres_access_ip }}"
+    ssl_mode: disable
+    engine: postgres
 
-superset_postgres_access_ip: "{{ platform_loadbalancer_vip_01 }}"
-superset_postgres_access_port: "{{ platform_postgresql_port }}"
+superset_postgres_db: "superset"
+superset_postgres_db_user: "{{ superset_sql_conn_creds['admin']['postgres']['user'] }}"
+superset_postgres_db_passwd: "{{ superset_sql_conn_creds['admin']['postgres']['password'] }}"
+
 
 superset_host_port: "8088"
 superset_docker_restart_policy: "Always"
@@ -55,3 +65,4 @@ superset_docker_restart_policy: "Always"
 #Path on hosts
 superset_host_base_dir: "/opt/guavus/superset"
 superset_host_k8s_dir: "{{ superset_host_base_dir }}/deployment/k8s"
+superset_host_sql_dir: "{{ superset_host_base_dir }}/deployment/sql"
