--- a/ansible/playbooks/superset/main.yml
+++ b/ansible/playbooks/superset/main.yml
@@ -26,8 +26,29 @@
     - reflex-provisionner/load_vars
 
 
+- name: SQL prepare
+  hosts:
+    - management-nodes
+  roles:
+    - role: superset/data_model
+
+- name: SQL install
+  hosts:
+    - management-nodes
+  vars:
+    - sql_history_logfile: "{{superset_host_sql_dir}}/sql_history.log"
+  roles:
+      - { role: sql-runner,
+         sql_scripts_dir: "{{superset_host_sql_dir}}/postgres/createdb/",
+         sql_conn_creds: "{{superset_sql_conn_creds['admin']['postgres']}}",
+         sql_conn_targets: "{{superset_sql_conn_targets['postgres']}}",
+         sql_db: 'postgres',
+         sql_autocommit: true
+         }
+
+
 - name: Superset role deployment
   hosts:
     - management-nodes
   roles:
-    - superset
+    - superset/superset
