refactor(ansible): Move superset roles in deep hierarchy
UIC-584

--- a/ansible/roles/superset/superset/tasks/main.yml
+++ b/ansible/roles/superset/superset/tasks/main.yml
@@ -70,7 +70,8 @@
     force: "true"
   with_items: "{{ superset_deploy_files.results }}"
   when:
-    - superset_deploy 
+    - superset_deploy
+    - superset_reload_pods 
 
 
 - name: Deploy superset
