--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -131,6 +131,9 @@
     "viewport-mercator-project": "^5.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "@types/react": "^16.4.16",
+    "@types/react-dom": "^16.0.9",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^8.2.2",
@@ -143,6 +146,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-env": "^1.7.0",
+    "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "cypress": "^3.0.3",
@@ -161,6 +165,7 @@
     "exports-loader": "^0.7.0",
     "fetch-mock": "^7.0.0-alpha.6",
     "file-loader": "^1.1.11",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "gl": "^4.0.4",
     "ignore-styles": "^5.0.1",
     "imports-loader": "^0.7.1",
@@ -181,7 +186,11 @@
     "speed-measure-webpack-plugin": "^1.2.3",
     "style-loader": "^0.21.0",
     "terser-webpack-plugin": "^1.1.0",
+    "thread-loader": "^1.2.0",
     "transform-loader": "^0.2.3",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.2.0",
+    "typescript": "^3.0.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.19.0",
     "webpack-assets-manifest": "^3.0.1",
