- Adding linting for TypeScript files via tslint. - Fixing linting for Javascript files importing Typscript files - Also fix linting for Javascript files that now leverage the webpack alias for the src directory
- up Typescript and type def versions

--- a/superset/assets/tsconfig.json
+++ b/superset/assets/tsconfig.json
@@ -19,7 +19,5 @@
     "noUnusedLocals": true,
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*", "./spec/**/*"]
 }
