--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -15,8 +15,8 @@
     "dev-server": "webpack-dev-server --mode=development --progress",
     "prod": "node --max_old_space_size=4096 webpack --mode=production --colors --progress",
     "build": "NODE_ENV=production webpack --mode=production --colors --progress",
-    "lint": "eslint --ignore-path=.eslintignore --ext .js,.jsx .",
-    "lint-fix": "eslint --fix --ignore-path=.eslintignore --ext .js,.jsx .",
+    "lint": "eslint --ignore-path=.eslintignore --ext .js,.jsx . && tslint -c tslint.json ./src/**/*.ts{,x}",
+    "lint-fix": "eslint --fix --ignore-path=.eslintignore --ext .js,.jsx . && tslint -c tslint.json --fix ./src/**/*.ts{,x}",
     "sync-backend": "babel-node --presets env src/syncBackend.js",
     "cypress": "cypress",
     "cypress-debug": "cypress open --config watchForFileChanges=true"
@@ -132,7 +132,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.10.4",
@@ -155,6 +155,7 @@
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^21.24.1",
@@ -189,7 +190,9 @@
     "transform-loader": "^0.2.3",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.2.0",
-    "typescript": "^3.0.3",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.19.0",
     "webpack-assets-manifest": "^3.0.1",
