--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ polyline==1.3.2
 pycparser==2.19           # via cffi
 pydruid==0.4.4
 pyhive==0.5.1
+PyJWT==1.6.4
 python-dateutil==2.6.1
 python-editor==1.0.3      # via alembic
 python-geohash==0.8.5
