--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -78,6 +78,7 @@
     "geolib": "^2.0.24",
     "immutable": "^3.8.2",
     "jed": "^1.1.1",
+    "jest": "^23.6.0",
     "jquery": "3.1.1",
     "json-bigint": "^0.3.0",
     "lodash": "^4.17.11",
