--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -104,6 +104,7 @@
     "react-dom": "^16.4.1",
     "react-gravatar": "^2.6.1",
     "react-hot-loader": "^4.3.6",
+    "react-loadable": "^5.5.0",
     "react-map-gl": "^3.0.4",
     "react-markdown": "^3.3.0",
     "react-redux": "^5.0.2",
