--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -70,6 +70,7 @@
     "d3-hierarchy": "^1.1.5",
     "d3-sankey": "^0.4.2",
     "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
     "d3-svg-legend": "^1.x",
     "d3-time-format": "^2.1.3",
     "d3-tip": "^0.9.1",
