--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ setenv =
 whitelist_externals =
     npm
 
-[testenv:cypress_dashboard]
+[testenv:cypress-dashboard]
 commands =
     {toxinidir}/superset/assets/cypress_build.sh dashboard
 setenv =
@@ -56,7 +56,7 @@ deps =
     -rrequirements.txt
     -rrequirements-dev.txt
 
-[testenv:cypress_explore]
+[testenv:cypress-explore]
 commands =
     {toxinidir}/superset/assets/cypress_build.sh explore
 setenv =
@@ -67,7 +67,7 @@ deps =
     -rrequirements.txt
     -rrequirements-dev.txt
 
-[testenv:cypress_sqllab]
+[testenv:cypress-sqllab]
 commands =
     {toxinidir}/superset/assets/cypress_build.sh sqllab
 setenv =
@@ -105,9 +105,9 @@ deps =
 
 [tox]
 envlist =
-    cypress_dashboard
-    cypress_explore
-    cypress_sqllab
+    cypress-dashboard
+    cypress-explore
+    cypress-sqllab
     eslint
     flake8
     javascript
