--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -51,6 +51,7 @@
     "@data-ui/sparkline": "^0.0.54",
     "@data-ui/theme": "^0.0.62",
     "@data-ui/xy-chart": "^0.0.61",
+    "@kenshooui/react-multi-select": "^1.0.60",
     "@superset-ui/core": "^0.0.5",
     "@vx/legend": "^0.0.170",
     "@vx/responsive": "0.0.172",
