修改：     contrib/docker/Dockerfile

--- a/contrib/docker/Dockerfile
+++ b/contrib/docker/Dockerfile
@@ -11,6 +11,7 @@ ENV LANG=C.UTF-8 \
     HOME=/home/work
 
 RUN apt-get update -y
+#Install dependencies to fix `curl https support error` and `elaying package configuration warning`
 RUN apt-get install -y apt-transport-https apt-utils
 # Install some dependencies
 # http://airbnb.io/superset/installation.html#os-dependencies
