--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,9 @@ pathlib2==2.3.0
 polyline==1.3.2
 pycparser==2.19           # via cffi
 pydruid==0.4.4
-pyhive==0.5.1
+sqlalchemy-utils==0.32.21
+sqlalchemy
+pyhive
 python-dateutil==2.6.1
 python-editor==1.0.3      # via alembic
 python-geohash==0.8.5
@@ -75,8 +77,6 @@ rfc3986==1.1.0            # via tableschema
 s3transfer==0.1.13        # via boto3
 sasl==0.2.1               # via thrift-sasl
 simplejson==3.15.0
-sqlalchemy-utils==0.32.21
-sqlalchemy==1.2.2
 sqlparse==0.2.4
 tableschema==1.1.0
 tabulator==1.15.0         # via tableschema
