--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -51,8 +51,10 @@
     "@data-ui/sparkline": "^0.0.54",
     "@data-ui/theme": "^0.0.62",
     "@data-ui/xy-chart": "^0.0.61",
-    "@superset-ui/connection": "^0.3.0",
-    "@superset-ui/translation": "^0.3.0",
+    "@superset-ui/color": "^0.4.0",
+    "@superset-ui/connection": "^0.4.0",
+    "@superset-ui/core": "^0.4.0",
+    "@superset-ui/translation": "^0.4.0",
     "@vx/legend": "^0.0.170",
     "@vx/responsive": "0.0.172",
     "@vx/scale": "^0.0.165",
