Feature/rest api (#12)
* feat(rest-api): added rest api interface to superset WIP

UIC-661

* feat(rest-api): upgraded rest api interface with python version 3.6.5

UIC-661

* feat(rest-api): refactored tox to work with pipenv

changed dependency version for autopep8 in pipfile which was causing an issue for pycodestyle dep conflict

UIC-661

* feat(rest-api): deleted requirements.txt and requirements-dev.txt against pipenv usage

UIC-661

* feat(rest-api): added .python-version file

UIC-661

* feat(pipenv-support): Docker build with pipenv

Though the Size of docker build is now increased to 4.6GB from 2.6GB
UIC-661

* feat(pipenv-support): Reverted Docker build with pipenv

Falling back to pip due to increase in docker image size

UIC-661

* feat(rest-api): removed unnecessary commented code

UIC-661

--- a/tox.ini
+++ b/tox.ini
@@ -28,12 +28,12 @@ require-code = true
 
 [testenv]
 commands =
+    pipenv install
     {toxinidir}/superset/bin/superset db upgrade
     nosetests tests/load_examples_test.py
     nosetests -e load_examples_test {posargs}
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    pipenv
     coverage
     mock
     nose
@@ -94,9 +94,8 @@ deps =
 
 [testenv:flake8]
 commands =
-    flake8 {toxinidir}/
-deps =
-    -rrequirements-dev.txt
+    pipenv install --dev
+    pipenv run flake8 {toxinidir}/
 
 [testenv:javascript]
 commands =
@@ -107,9 +106,7 @@ deps =
 [testenv:pylint]
 commands =
     pylint superset
-deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+
 
 [tox]
 envlist =
