--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -77,6 +77,7 @@
     "dnd-core": "^2.6.0",
     "dompurify": "^1.0.3",
     "fastdom": "^1.0.6",
+    "geojson-extent": "^0.3.2",
     "geolib": "^2.0.24",
     "immutable": "^3.8.2",
     "jed": "^1.1.1",
@@ -112,7 +113,7 @@
     "react-redux": "^5.0.2",
     "react-resizable": "^1.3.3",
     "react-search-input": "^0.11.3",
-    "react-select": "1.0.0-rc.10",
+    "react-select": "1.2.1",
     "react-select-fast-filter-options": "^0.2.1",
     "react-sortable-hoc": "^0.8.3",
     "react-split-pane": "^0.1.66",
