[WiP] Integrate Kepler.gl as a new visualization type
Kepler.gl is an amazing geospatial React application. It offers a very
well designed user interface to compose geo layers and slice and dice
geospatial data.

As it turns out, Kepler is designed to be embedded as part of React
apps. It took me only a few hours to get to a working prototype.

Next steps:
* allow to save the state, without the data
* restore the state, and merge with the new data
* tweak styles, make a light style that looks decent within Superste,
  Kepler uses stylable components, so that should be somewhat
  straigthforward

--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -96,6 +96,7 @@
     "immutable": "^3.8.2",
     "jquery": "3.1.1",
     "json-bigint": "^0.3.0",
+    "kepler.gl": "0.1.6",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.0",
     "mathjs": "^3.20.2",
@@ -120,6 +121,7 @@
     "react-jsonschema-form": "^1.2.0",
     "react-map-gl": "^4.0.10",
     "react-markdown": "^3.3.0",
+    "react-palm": "^3.0.0",
     "react-redux": "^5.0.2",
     "react-search-input": "^0.11.3",
     "react-select": "1.2.1",
