--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
@@ -42,9 +42,6 @@
     src: "{{ item.file }}.j2"
     dest: "{{ superset_host_k8s_dir }}/{{ item.file }}"
   with_items:
-    - name: superset-configmap
-      file: superset-configmap.yaml
-      type: configmap
     - name: superset-deployment
       file: superset-deployment.yaml
       type: Deployment
@@ -59,7 +56,7 @@
 - name: Undeploy superset
   kube:
     name: "{{ item.item.name }}"
-    namespace: "{{ superset_kube_namespace }}"
+    namespace: default
     kubectl: "{{ bin_dir }}/kubectl"
     resource: "{{ item.item.type }}"
     filename: "{{ superset_host_k8s_dir }}/{{ item.item.file }}"
@@ -74,7 +71,7 @@
 - name: Deploy superset
   kube:
     name: "{{ item.item.name }}"
-    namespace: "{{ superset_kube_namespace }}"
+    namespace: default
     kubectl: "{{ bin_dir }}/kubectl"
     resource: "{{ item.item.type }}"
     filename: "{{ superset_host_k8s_dir }}/{{ item.item.file }}"
