--- a/tox.ini
+++ b/tox.ini
@@ -100,7 +100,7 @@ deps =
 
 [testenv:pylint]
 commands =
-    pylint superset --verbose
+    travis_wait pylint superset --verbose
 deps =
     -rrequirements.txt
     -rrequirements-dev.txt
