--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -70,6 +70,8 @@
     "immutable": "^3.8.2",
     "jed": "^1.1.1",
     "jquery": "3.1.1",
+    "leaflet": "^1.3.4",
+    "@turf/turf":"^5.1.6",
     "lodash.throttle": "^4.1.1",
     "luma.gl": "^5.1.4",
     "mapbox-gl": "^0.45.0",
