fix(haproxy_backend): Add superset haproxy backend entry (#24)
UIC-721

--- a/superset-installer/etc/reflex-provisioner/playbooks/raf/superset/main.yml
+++ b/superset-installer/etc/reflex-provisioner/playbooks/raf/superset/main.yml
@@ -44,6 +44,11 @@
   roles:
     - role: raf/superset/data_model
 
+- name: Superset haproxy backend
+  hosts:
+    - loadbalancer-nodes
+  roles:
+    - raf/superset/haproxy_backend
 
 - name: Superset role deployment
   hosts:
