fix(namespace): added guavus namespace (#26)
UIC-721

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -32,6 +32,7 @@ superset_docker_images:
   - name: guavus-superset
     tag: "{{ superset_image_tag }}"
 
+superset_kube_namespace: default
 
 #------------------------------------------------------------------#
 #                      Configurations                              #
