fix(namespace): added guavus namespace (#29)
UIC-721

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
@@ -56,7 +56,7 @@
 - name: Undeploy superset
   kube:
     name: "{{ item.item.name }}"
-    namespace: default
+    namespace: "{{ superset_kube_namespace }}"
     kubectl: "{{ bin_dir }}/kubectl"
     resource: "{{ item.item.type }}"
     filename: "{{ superset_host_k8s_dir }}/{{ item.item.file }}"
@@ -71,7 +71,7 @@
 - name: Deploy superset
   kube:
     name: "{{ item.item.name }}"
-    namespace: default
+    namespace: "{{ superset_kube_namespace }}"
     kubectl: "{{ bin_dir }}/kubectl"
     resource: "{{ item.item.type }}"
     filename: "{{ superset_host_k8s_dir }}/{{ item.item.file }}"
