add docker files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ yarn-error.log
 *.iml
 venv
 @eaDir/
+
+# Docker
+Dockerfile
+docker-build.sh
+docker-compose.yml
+docker-entrypoint.sh
+docker-init.sh
