fix(psql): add superset config file to retain psql db data and move docker scripts files to docker  folder (#31)
fix of retain psql data is adding of superset config file in docker scripts
only refactoring moving docker related files to docker folder

UIC-806

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,47 +1,62 @@
 FROM python:3.6.5
 
-MAINTAINER Arpit Agarwal <arpit.agarwal@guavus.com>
+RUN useradd --user-group --create-home --no-log-init --shell /bin/bash superset
 
 # Configure environment
 ENV LANG=C.UTF-8 \
-    LC_ALL=C.UTF-8 \
-    HOME=/home/work
+    LC_ALL=C.UTF-8
 
-ENV DEBIAN_FRONTEND=noninteractive
+ENV ADMIN_USERNAME guavus
+ENV ADMIN_FIRST_NAME guavus
+ENV ADMIN_LAST_NAME user
+ENV ADMIN_EMAIL support@guavus.com
+ENV ADMIN_PWD Guavus@123
 
-RUN apt-get update -y && apt-get install -y build-essential libssl-dev \
-    libffi-dev python3-dev libsasl2-dev libldap2-dev \
-    libsasl2-modules libsasl2-2 libsasl2-modules-gssapi-mit krb5-user
-    
-RUN mkdir -p $HOME/incubator-superset
+RUN apt-get update -y
 
-RUN mkdir -p /etc/security/keytabs/
+# Install dependencies to fix `curl https support error` and `elaying package configuration warning`
+RUN apt-get install -y apt-transport-https apt-utils
 
-WORKDIR $HOME/incubator-superset
+# Install superset dependencies
+# https://superset.incubator.apache.org/installation.html#os-dependencies
+RUN apt-get install -y build-essential libssl-dev \
+    libffi-dev python3-dev libsasl2-dev libldap2-dev libxi-dev
 
-COPY ./ ./
-
-RUN pip install --upgrade setuptools pip && pip install wheel && python ./setup.py bdist_wheel && pip install ./dist/*.whl
+# Install extra useful tool for development
+RUN apt-get install -y vim less postgresql-client redis-tools
 
 # Install nodejs for custom build
-# https://github.com/apache/incubator-superset/blob/master/docs/installation.rst#making-your-own-build
+# https://superset.incubator.apache.org/installation.html#making-your-own-build
 # https://nodejs.org/en/download/package-manager/
-RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
-RUN apt-get install -y nodejs
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
-    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list; \
-    apt-get update; \
-    apt-get install -y yarn
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash - \
+    && apt-get install -y nodejs
 
-RUN cd superset/assets && yarn && yarn run build && cd ../../
+WORKDIR /home/superset
 
-ENV PATH=/home/work/incubator-superset/superset/bin:$PATH \
-    PYTHONPATH=./superset/:$PYTHONPATH
+COPY requirements.txt .
+COPY requirements-dev.txt .
 
-COPY docker-init.sh /usr/local/bin/
+RUN pip install --upgrade setuptools pip \
+    && pip install -r requirements.txt -r requirements-dev.txt \
+    && rm -rf /root/.cache/pip
 
-RUN chmod +x /usr/local/bin
+USER superset
+
+COPY --chown=superset:superset superset superset
+
+ENV PATH=/home/superset/superset/bin:$PATH \
+    PYTHONPATH=/home/superset/superset/:$PYTHONPATH
+
+RUN cd superset/assets \
+    && npm ci \
+    && npm run sync-backend \
+    && npm run build \
+    && rm -rf node_modules
+
+COPY contrib/docker/docker-init.sh .
+COPY contrib/docker/docker-entrypoint.sh /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
 EXPOSE 8088
 
-ENTRYPOINT ["docker-init.sh"]
+EXPOSE 8088
