--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ billiard==3.5.0.4         # via celery
 bleach==3.0.2
 boto3==1.4.7
 botocore==1.7.48
+cachetools==3.0.0         # via google-auth
 cchardet==1.0.0           # via tabulator
 celery==4.2.0
 certifi==2018.8.24        # via requests
@@ -37,6 +38,8 @@ flask==1.0.2
 flower==0.9.2
 future==0.16.0            # via pyhive
 geopy==1.11.0
+google-auth==1.6.1        # via gsheetsdb
+gsheetsdb==0.1.8
 gunicorn==19.8.0
 humanize==0.5.1
 idna==2.6
@@ -53,27 +56,33 @@ linear-tsv==1.1.0         # via tabulator
 mako==1.0.7               # via alembic
 markdown==3.0
 markupsafe==1.0           # via jinja2, mako
+mo-future==2.20.18317     # via moz-sql-parser
+moz-sql-parser==2.19.18318  # via gsheetsdb
 numpy==1.15.2             # via pandas
 openpyxl==2.4.11          # via tabulator
 pandas==0.23.1
 parsedatetime==2.0.0
 pathlib2==2.3.0
 polyline==1.3.2
+pyasn1-modules==0.2.2     # via google-auth
+pyasn1==0.4.4             # via pyasn1-modules, rsa
 pycparser==2.19           # via cffi
 pydruid==0.5.0
 pyhive==0.5.1
+pyparsing==2.3.0          # via moz-sql-parser
 python-dateutil==2.6.1
 python-editor==1.0.3      # via alembic
 python-geohash==0.8.5
 python3-openid==3.1.0     # via flask-openid
 pytz==2018.5              # via babel, celery, flower, pandas
 pyyaml==3.13
-requests==2.18.4
+requests==2.21.0
 rfc3986==1.1.0            # via tableschema
+rsa==4.0                  # via google-auth
 s3transfer==0.1.13        # via boto3
 sasl==0.2.1               # via thrift-sasl
 simplejson==3.15.0
-six==1.11.0               # via bleach, cryptography, isodate, jsonlines, linear-tsv, pathlib2, polyline, pydruid, python-dateutil, sasl, sqlalchemy-utils, tableschema, tabulator, thrift
+six==1.11.0               # via bleach, cryptography, google-auth, gsheetsdb, isodate, jsonlines, linear-tsv, pathlib2, polyline, pydruid, python-dateutil, sasl, sqlalchemy-utils, tableschema, tabulator, thrift
 sqlalchemy-utils==0.32.21
 sqlalchemy==1.2.2
 sqlparse==0.2.4
