--- a/contrib/docker/docker-compose.yml
+++ b/contrib/docker/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - postgres:/var/lib/postgresql/data
   superset:
     build:
-      context: ../../
-      dockerfile: contrib/docker/Dockerfile
+      context: ./
+      dockerfile: Dockerfile
     restart: unless-stopped
     environment:
       POSTGRES_DB: superset
@@ -34,6 +34,7 @@ services:
       # If using production, comment development volume below
       #SUPERSET_ENV: production
       SUPERSET_ENV: development
+      FLASK_APP: "superset:app"
     ports:
       - 8088:8088
     depends_on:
@@ -43,7 +44,7 @@ services:
       # this is needed to communicate with the postgres and redis services
       - ./superset_config.py:/home/superset/superset/superset_config.py
       # this is needed for development, remove with SUPERSET_ENV=production
-      - ../../superset:/home/superset/superset
+      - ./superset:/home/superset/superset
 volumes:
   postgres:
     external: false
