--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -121,6 +121,7 @@
     "react-search-input": "^0.11.3",
     "react-select": "1.2.1",
     "react-select-fast-filter-options": "^0.2.1",
+    "react-shortcuts": "^1.6.2",
     "react-sortable-hoc": "^0.8.3",
     "react-split-pane": "^0.1.66",
     "react-sticky": "^6.0.2",
