--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -145,7 +145,7 @@
     "@types/react-dom": "^16.0.9",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.10.4",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "7.2.3",
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-css-modules-transform": "^1.1.0",
@@ -162,7 +162,7 @@
     "cypress": "^3.0.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-webpack": "^0.10.1",
