--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ whitelist_externals =
 
 [testenv:cypress-dashboard]
 commands =
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh dashboard
 setenv =
     PYTHONPATH = {toxinidir}
@@ -58,6 +59,7 @@ deps =
 
 [testenv:cypress-explore]
 commands =
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh explore
 setenv =
     PYTHONPATH = {toxinidir}
@@ -69,6 +71,7 @@ deps =
 
 [testenv:cypress-sqllab]
 commands =
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh sqllab
 setenv =
     PYTHONPATH = {toxinidir}
