--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ whitelist_externals =
 
 [testenv:cypress-dashboard]
 commands =
+    npm install -g npm@'>=6.5.0'
     pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh dashboard
 setenv =
@@ -59,6 +60,7 @@ deps =
 
 [testenv:cypress-explore]
 commands =
+    npm install -g npm@'>=6.5.0'
     pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh explore
 setenv =
@@ -71,6 +73,7 @@ deps =
 
 [testenv:cypress-sqllab]
 commands =
+    npm install -g npm@'>=6.5.0'
     pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh sqllab
 setenv =
