Using latest lts of nvm

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
       services:
         - redis-server
       before_install:
-        - nvm install 8.9
+        - nvm install 10.14.2
     - language: python
       python: 3.6
       env: TOXENV=cypress-explore
@@ -25,7 +25,7 @@ jobs:
       services:
         - redis-server
       before_install:
-        - nvm install 8.9
+        - nvm install 10.14.2
     - language: python
       python: 3.6
       env: TOXENV=cypress-sqllab
@@ -37,7 +37,7 @@ jobs:
       services:
         - redis-server
       before_install:
-        - nvm install 8.9
+        - nvm install 10.14.2
     - language: python
       python: 3.6
       env: TOXENV=py36-mysql
@@ -48,17 +48,11 @@ jobs:
         - mysql -u root -e "DROP DATABASE IF EXISTS superset; CREATE DATABASE superset DEFAULT CHARACTER SET utf8 COLLATE utf8_unicode_ci"
         - mysql -u root -e "CREATE USER 'mysqluser'@'localhost' IDENTIFIED BY 'mysqluserpassword';"
         - mysql -u root -e "GRANT ALL ON superset.* TO 'mysqluser'@'localhost';"
-    - language: node_js
-      node_js: 8.9
+    - language: python
       env: TOXENV=javascript
       cache:
       before_install:
-        - cd superset/assets
-      install:
-        - npm ci
-      script:
-        - npm run lint
-        - npm run cover
+        - nvm install 10.14.2
     - language: python
       python: 3.6
       env: TOXENV=flake8
