--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -62,7 +62,6 @@
     "@vx/responsive": "0.0.172",
     "@vx/scale": "^0.0.165",
     "abortcontroller-polyfill": "^1.1.9",
-    "babel-register": "^6.24.1",
     "bootstrap": "^3.3.6",
     "bootstrap-slider": "^10.0.0",
     "brace": "^0.11.1",
@@ -101,7 +100,6 @@
     "re-resizable": "^4.3.1",
     "react": "^16.4.1",
     "react-ace": "^5.10.0",
-    "react-addons-shallow-compare": "^15.4.2",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-dialog": "^0.10.0",
     "react-bootstrap-slider": "2.1.5",
@@ -140,12 +138,13 @@
     "viewport-mercator-project": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
     "@babel/polyfill": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@types/jest": "^23.3.5",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.10.4",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
