Kerberos access support in Superset (#36)
* feat(kerberos-support): Added kerberos support on superset

Added required libs to enable krb5 client on superset
changes in ansible scripts to dynamically enable krb5 support on superset

UIC-811

* feat(kerberos-support): fixed path issues for customer and default

UIC-811

* feat(kerberos-support): added validation to check if kerberos ticket is valid

UIC-811

* feat(kerberos-support): fixed permission issues

UIC-811

* chore(*): fixed yarn package

UIC-811

* chore(*): added method comment

UIC-811

* feat(kerberos-support): corrected docker file

UIC-811

* feat(kerberos-support): remove redundant packages from pipfile

UIC-811

* feat(kerberos-support): updated setup.py

UIC-811

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -68,3 +68,15 @@ superset_docker_restart_policy: "Always"
 superset_host_base_dir: "/opt/guavus/superset"
 superset_host_k8s_dir: "{{ superset_host_base_dir }}/deployment/k8s"
 superset_host_sql_dir: "{{ superset_host_base_dir }}/deployment/sql"
+
+#------------------------------------------------------------------#
+#                      Kerberos Config                               #
+#------------------------------------------------------------------#
+superset_hive_keytab_name: "hive.service.keytab"
+superset_krb5_conf_name: "krb5.conf"
+
+superset_kerberos_config_dir: "{{ superset_host_base_dir }}/krb5-config"
+
+# Config Diretory
+superset_config_dir: "{{ role_path }}/../kerberos/files/config"
+superset_kerberos_enabled: false
