--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
@@ -42,6 +42,9 @@
     src: "{{ item.file }}.j2"
     dest: "{{ superset_host_k8s_dir }}/{{ item.file }}"
   with_items:
+    - name: superset-configmap
+      file: superset-configmap.yaml
+      type: configmap
     - name: superset-deployment
       file: superset-deployment.yaml
       type: Deployment
