feat(leafletmap): add esri JS support for arcgis map server (#37)
add esri js support for arcgis map server

UIC-812

--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -72,6 +72,7 @@
     "jquery": "3.1.1",
     "leaflet": "^1.3.4",
     "@turf/turf":"^5.1.6",
+    "esri-leaflet":"2.2.3",
     "lodash.throttle": "^4.1.1",
     "luma.gl": "^5.1.4",
     "mapbox-gl": "^0.45.0",
