--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -89,6 +89,7 @@
     "lodash": "^4.17.11",
     "leaflet": "^1.3.4",
     "@turf/turf":"^5.1.6",
+    "esri-leaflet":"2.2.3",
     "lodash.throttle": "^4.1.1",
     "luma.gl": "^5.1.4",
     "mapbox-gl": "^0.45.0",
