--- a/Pipfile
+++ b/Pipfile
@@ -51,6 +51,7 @@ SQLAlchemy = "==1.2.2"
 SQLAlchemy-Utils = "==0.32.21"
 thrift_sasl = "==0.3.0"
 pipenv = "*"
+python-ldap = "==3.1.0"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
