--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -14,7 +14,7 @@ superset_docker_registry: "{{ docker_default_registry }}"
 #------------------------------------------------------------------#
 #                       Components Version                         #
 #------------------------------------------------------------------#
-superset_image_tag: "1.0.4"
+superset_image_tag: "test_12"
 
 #------------------------------------------------------------------#
 #                      Docker Path                                 #
@@ -68,3 +68,45 @@ superset_docker_restart_policy: "Always"
 superset_host_base_dir: "/opt/guavus/superset"
 superset_host_k8s_dir: "{{ superset_host_base_dir }}/deployment/k8s"
 superset_host_sql_dir: "{{ superset_host_base_dir }}/deployment/sql"
+
+#------------------------------------------------------------------#
+#                      Kerberos Config                               #
+#------------------------------------------------------------------#
+superset_hive_keytab_name: "hive.service.keytab"
+superset_krb5_conf_name: "krb5.conf"
+
+superset_kerberos_config_dir: "{{ superset_host_base_dir }}/krb5-config"
+
+# Config Diretory
+superset_config_dir: "{{ role_path }}/../kerberos/files/config"
+superset_kerberos_enabled: false
+
+
+#LDAP configuration
+superset_certificate_files: []
+
+SUPERSET_AUTH_ROLE_ADMIN: "Admin"
+SUPERSET_AUTH_ROLE_PUBLIC: "Public"
+
+SUPERSET_AUTH_TYPE: "AUTH_DB"
+SUPERSET_AUTH_USER_REGISTRATION: True
+SUPERSET_AUTH_USER_REGISTRATION_ROLE: "Admin"
+SUPERSET_AUTH_LDAP_USE_TLS: False
+SUPERSET_AUTH_LDAP_SERVER: "" # ldap://guavus.com:389 (Define the DN for the user that will be used for the initial LDAP BIND. This is necessary for OpenLDAP and can be used on MSFT AD.)
+SUPERSET_AUTH_LDAP_BIND_USER: "" # cn=Ankur Singhal,ou=gurgaon,ou=India,ou=UserIDs,dc=guavus,dc=com
+SUPERSET_AUTH_LDAP_BIND_PASSWORD: "" # Define password for the bind user.
+
+SUPERSET_AUTH_LDAP_TLS_DEMAND: False
+SUPERSET_AUTH_LDAP_TLS_CACERTDIR: "/etc/cert/"
+SUPERSET_AUTH_LDAP_TLS_CACERTFILE: ""
+SUPERSET_AUTH_LDAP_TLS_CERTFILE: ""
+SUPERSET_AUTH_LDAP_TLS_KEYFILE: ""
+
+SUPERSET_AUTH_LDAP_SEARCH: "" #dc=guavus,dc=com
+SUPERSET_AUTH_LDAP_UID_FIELD: "uid" #sAMAccountName
+SUPERSET_AUTH_LDAP_FIRSTNAME_FIELD: "givenName"
+SUPERSET_AUTH_LDAP_LASTNAME_FIELD: "sn"
+SUPERSET_AUTH_LDAP_EMAIL_FIELD: "mail"
+SUPERSET_AUTH_LDAP_ALLOW_SELF_SIGNED: False
+SUPERSET_AUTH_LDAP_APPEND_DOMAIN: ""
+SUPERSET_AUTH_LDAP_USERNAME_FORMAT: ""
