LDAP Supported added (#40)
* feat(LDAP): LDAP support added

* feat(LDAP): set default values of LDAP

* feat(LDAP): remove pyldap

* feat(LDAP): remove pyldap from setup.py

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,10 @@ RUN mkdir -p $HOME/incubator-superset
 
 RUN mkdir -p /etc/security/keytabs/
 
+RUN mkdir -p /etc/cert/
+
+RUN chmod +x /etc/cert/
+
 WORKDIR $HOME/incubator-superset
 
 COPY ./ ./
