--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
@@ -45,6 +45,9 @@
     - name: superset-configmap
       file: superset-configmap.yaml
       type: configmap
+    - name: superset-cert-configmap
+      file: superset-cert-configmap.yaml
+      type: configmap
     - name: superset-deployment
       file: superset-deployment.yaml
       type: Deployment
