--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,9 +5,11 @@ MAINTAINER Arpit Agarwal <arpit.agarwal@guavus.com>
 # Configure environment
 ENV LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
-    HOME=/home/work
-
-ENV DEBIAN_FRONTEND=noninteractive
+    user=guavus-raf \
+    HOME=/home/${user} \
+    DEBIAN_FRONTEND=noninteractive
+    
+RUN useradd --user-group --create-home --no-log-init --shell /bin/bash ${user}
 
 RUN apt-get update -y && apt-get install -y build-essential libssl-dev \
     libffi-dev python3-dev libsasl2-dev libldap2-dev \
@@ -19,8 +21,6 @@ RUN mkdir -p /etc/security/keytabs/
 
 RUN mkdir -p /etc/cert/
 
-RUN chmod +x /etc/cert/
-
 WORKDIR $HOME/incubator-superset
 
 COPY ./ ./
@@ -30,7 +30,7 @@ RUN pip install --upgrade setuptools pip && pip install wheel && python ./setup.
 # Install nodejs for custom build
 # https://github.com/apache/incubator-superset/blob/master/docs/installation.rst#making-your-own-build
 # https://nodejs.org/en/download/package-manager/
-RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN curl -sL https://deb.nodesource.com/setup_8.x |  bash -
 RUN apt-get install -y nodejs
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list; \
@@ -39,12 +39,14 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
 
 RUN cd superset/assets && yarn && yarn run build && cd ../../
 
-ENV PATH=/home/work/incubator-superset/superset/bin:$PATH \
+ENV PATH=/home/${user}/incubator-superset/superset/bin:$PATH \
     PYTHONPATH=./superset/:$PYTHONPATH
 
 COPY docker-init.sh /usr/local/bin/
 
+RUN chmod +x /etc/cert
 RUN chmod +x /usr/local/bin
+RUN chown -R ${user}:${user} $HOME
 
 EXPOSE 8088
 
